@@ -1,3 +1,10 @@
+2006-10-17  Akim Demaille  <demaille@gostai.com>
+
+	Add libport.
+	* libport: New.
+	* build-aux/svn-externals: Know it.
+	* build-aux/build-aux.mk: Know it.
+
 2006-10-16  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>
 
 	r40: Add AutoTroll.
